Remove an unused dependency, add missing `@Override` annotations, avoid an usage of `/` path separator.